--- a/css/style.css
+++ b/css/style.css
@@ -58,7 +58,7 @@ table {
 /*=== RESET END ===*/
 
 body {
-    background-color: rgba(255, 255, 255, 0.83);
+    background-color: rgba(255, 167, 35, 0.932);
     color: black;
     margin: 0;
     padding: 0;
@@ -93,21 +93,9 @@ h1 {
 
 .main-header {
     width: 100%;
-    height: 90px;
+    height: 9vh;
     background-color: chocolate;
     padding-top: 20px;
-    padding: 1rem;
-}
-
-.navicon {
-    display: inline-block;
-    width: 48px;
-    height: 48px;
-    background-image: url("./Images/navbar.png");
-    background-size: contain;
-    margin-left: 20px;
-    margin-right: 100px;
-    border: none;
 }
 
 .navicon:hover {
@@ -117,10 +105,11 @@ h1 {
 }
 
 .navbar {
-    width: 5rem;
-    height: 100vh;
+    width: 12rem;
+    height: 11vh;
     position: fixed;
     background-color: var(--bg-primary);
+    transition: height 200ms ease;
 }
 
 .navbar-nav {
@@ -129,11 +118,49 @@ h1 {
     margin: 0;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    margin-left: 1rem;
 }
 
-.nav-item:last-child {
-    margin-top: auto;
+.nav-logo {
+    display: flex;
+    height: auto;
+    color: var(--text-secondary);
+    text-decoration: none;
+    align-items: center;
+    margin-left: 2.5rem;
+}
+
+.nav-link {
+    display: flex;
+    display: none;
+    align-items: center;
+    height: 5rem;
+    color: var(--text-primary);
+    text-decoration: none;
+}
+
+.link-text {
+    display: none;
+}
+
+.nav-link i {
+    min-width: 2rem;
+    margin-right: 1rem;
+}
+
+.navbar:hover {
+    height: 100vh;
+    width: 12rem;
+}
+
+.navbar:hover .nav-link {
+    display: flex;
+
+}
+
+.navbar:hover .link-text {
+    display: block;
+
 }
 
 .header-content {
