--- a/css/style.css
+++ b/css/style.css
@@ -83,6 +83,7 @@ main {
 
 h1 {
     font-size: 22px;
+    margin: 0px auto;
 }
 
 .transparent {
@@ -92,10 +93,12 @@ h1 {
 }
 
 .main-header {
-    width: 100%;
+    display: flex;
+    width: 90%;
     height: 9vh;
     background-color: chocolate;
     padding-top: 20px;
+    margin-left: 12rem;
 }
 
 .navicon:hover {
@@ -106,7 +109,7 @@ h1 {
 
 .navbar {
     width: 12rem;
-    height: 11vh;
+    height: 7rem;
     position: fixed;
     background-color: var(--bg-primary);
     transition: height 200ms ease;
@@ -128,6 +131,7 @@ h1 {
     text-decoration: none;
     align-items: center;
     margin-left: 2.5rem;
+    margin-top: 0.7rem;
 }
 
 .nav-link {
@@ -167,12 +171,9 @@ h1 {
     background-color: cornflowerblue;
     width: 80%;
     height: 70%;
-    padding-left: 5px;
-    padding-right: 5px;
-    padding-top: 5px;
     margin: 0px auto;
-    margin-left: 10rem;
-    display: inline-block;
-    text-align: center;
+    display: flex;
+    padding: 4px;
+    align-items: center;
     vertical-align: middle;
 }
