--- a/css/style.css
+++ b/css/style.css
@@ -58,7 +58,7 @@ table {
 /*=== RESET END ===*/
 
 body {
-    background-color: rgba(255, 167, 35, 0.932);
+    background-color: rgb(255,140,0);
     color: black;
     margin: 0;
     padding: 0;
@@ -77,7 +77,8 @@ body::-webkit-scrollbar-thumb {
 }
 
 main {
-    margin-left: 5rem;
+    margin-left: 2rem;
+    margin-right: 2rem;
     padding: 1rem;
 }
 
@@ -95,10 +96,10 @@ h1 {
 .main-header {
     display: flex;
     width: auto;
-    height: 9vh;
-    background-color: chocolate;
+    height: 4.5rem;
+    background-color: var(--bg-secondary);
     padding-top: 20px;
-    margin-left: 12rem;
+    margin-left: 8rem;
 }
 
 .navicon:hover {
@@ -108,10 +109,10 @@ h1 {
 }
 
 .navbar {
-    width: 12vh;
-    height: 9vh;
-    position: fixed;
-    background-color: var(--bg-primary);
+    width: 8rem;
+    height: 5.75rem;
+    position: absolute;
+    background-color: var(--bg-secondary);
     transition: height 200ms ease;
 }
 
@@ -132,6 +133,15 @@ h1 {
     align-items: center;
 }
 
+.nav-item {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+}
+
+.nav-list:last-child {
+    margin-top: 90rem;
+}
+
 .nav-link {
     display: flex;
     display: none;
@@ -148,11 +158,17 @@ h1 {
 .nav-link i {
     min-width: 1.5rem;
     margin-right: 0.5rem;
+    filter: grayscale(1);
+}
+
+.nav-link:hover .fa-align-left {
+    color: red;
+    filter: grayscale(0);
 }
 
 .navbar:hover {
     height: 100vh;
-    width: 12vh;
+    width: 8rem;
 }
 
 .navbar:hover .nav-link {
@@ -165,25 +181,30 @@ h1 {
 
 }
 
-.navbar:hover .nav-logo {
-    animation-name: porog;
-    animation-duration: 1s;
-    animation-timing-function: ease;
-    animation-iteration-count: 1;
+.header-logo {
+    background-image: url('/Images/fire.png');
+    width: 64px;
+    height: 64px;
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
+    display: inline;
+    margin: 0px auto;
+    margin-left: 15px;
+    position: relative;
+    align-items: center;
+}
+
+.header-logo:hover {
+    filter: grayscale(0.2);
+    filter:
 }
 
 .header-content {
-    background-color: cornflowerblue;
+    background-color:rgb(255,140,0);
     width: 80%;
-    height: 70%;
+    height: 4rem;
     margin: 0px auto;
     display: flex;
-    padding: 4px;
     align-items: center;
-    vertical-align: middle;
-}
-
-@keyframes porog {
-    from{transform: rotate(0deg);}
-    to{transform: rotate(180deg);}
 }
