--- a/css/style.css
+++ b/css/style.css
@@ -65,7 +65,7 @@ body {
 }
 
 body::-webkit-scrollbar {
-    width: 0.25rem;
+    width: 0.65rem;
 }
 
 body::-webkit-scrollbar-track {
@@ -109,7 +109,7 @@ h1 {
 }
 
 .navbar {
-    width: 8rem;
+    width: 9rem;
     height: 5.75rem;
     position: absolute;
     background-color: var(--bg-secondary);
@@ -126,7 +126,7 @@ h1 {
 }
 
 .nav-logo {
-    margin: 1.5rem auto;
+    margin: 1.5rem;
     display: flex;
     height: max-content;
     color: var(--text-secondary);
@@ -169,7 +169,7 @@ h1 {
 
 .navbar:hover {
     height: 100vh;
-    width: 8rem;
+    width: 9rem;
 }
 
 .navbar:hover .nav-link {
@@ -191,9 +191,9 @@ h1 {
     background-repeat: no-repeat;
     display: inline;
     margin: 0px auto;
-    margin-left: 15px;
-    position: relative;
+    margin-left: 10px;
     align-items: center;
+    position: relative;
 }
 
 .header-logo:hover {
@@ -202,7 +202,8 @@ h1 {
 
 .header-content {
     background-color: whitesmoke;
-    width: 80%;
+    min-width: 85%;
+    width: 85%;
     height: 4rem;
     margin: 0px auto;
     display: flex;
