--- a/css/style.css
+++ b/css/style.css
@@ -92,25 +92,14 @@ h1 {
     min-width: 2rem;
 }
 
-.transparent {
-	zoom: 1;
-	filter: alpha(opacity=50);
-	opacity: 0.5;
-}
-
 .main-header {
     display: flex;
     width: auto;
     height: 4.5rem;
     background-color: var(--bg-secondary);
     padding-top: 20px;
+    padding-right: 10px;
     margin-left: 8rem;
-}
-
-.navicon:hover {
-    transform: rotate(180deg);
-    transition: 0.5s;
-    transition-timing-function: ease-in-out;
 }
 
 .navbar {
@@ -128,6 +117,7 @@ h1 {
     display: flex;
     flex-direction: column;
     margin-left: 1rem;
+    height: inherit;
 }
 
 .nav-logo {
@@ -144,8 +134,8 @@ h1 {
     margin-bottom: 1rem;
 }
 
-.nav-list:last-child {
-    margin-top: 90rem;
+.navbar-nav:last-child {
+    margin-top: auto;
 }
 
 .nav-link {
@@ -188,8 +178,19 @@ h1 {
 
 }
 
+.hover-box {
+    min-width: 69px;
+    width: 64px;
+    height: 4.5rem;
+    display: flex;
+
+}
+
 .header-logo {
+    border-radius: 64px;
     background-image: url('/Images/fire.png');
+    background-color: white;
+    min-width: 64px;
     width: 64px;
     height: 64px;
     background-position: center;
@@ -199,8 +200,52 @@ h1 {
     align-items: center;
 }
 
+.logo-list {
+    height: 5rem;
+    width: auto;
+    background-color: var(--bg-primary);
+    list-style: none;
+    padding: 4px;
+    margin-top: 0;
+    margin-bottom: 0;
+    display: none;
+    flex-direction: column;
+    align-items: center;
+    position: absolute;
+    justify-content: flex-start;
+    top: 4.5rem;
+    right: 7rem;
+}
+
+.logo-item {
+    display: none;
+    padding-top: 0.5rem;
+    padding-bottom: 1rem;
+}
+
+.list-link {
+    text-decoration: none;
+}
+
+.list-text {
+    color: var(--text-primary)
+}
+
 .header-logo:hover {
     filter: grayscale(0.2);
+}
+
+.hover-box:hover .logo-list {
+    position: relative;
+    display: flex;
+    height: 9rem;
+    padding: 0.69rem;
+    margin: 0 auto;
+    width: 10rem;
+}
+
+.hover-box:hover .logo-item {
+    display: flex;
 }
 
 .header-content {
