--- a/files/style.css
+++ b/files/style.css
@@ -331,6 +331,15 @@ h1 {
     border: 3px solid black;
     margin: 0px auto;
 }
+
+.hhaven-proj {
+    width: 100%;
+    height: 50rem;
+    min-width: 10rem;
+    display: flex;
+    border: 3px solid black;
+    margin: 0px auto;
+}
 /*=== PROJECT POSTS - END ===*/
 
 @keyframes mozog {
