--- a/files/style.css
+++ b/files/style.css
@@ -54,6 +54,8 @@ table {
     --text-secondary: #ececec;
     --bg-primary: #23232e;
     --bg-secondary: #141418;
+    --default-height: 0rem;
+    --expanded-height: 50rem;
 }
 
 /*=== RESET - END ===*/
@@ -97,7 +99,7 @@ h1 {
 
 /*=== NAV MENU ===*/
 .navbar {
-    width: 9rem;
+    width: 8rem;
     height: 5.75rem;
     position: fixed;
     background-color: var(--bg-secondary);
@@ -324,6 +326,25 @@ h1 {
     margin-bottom: 0.25rem;
 }
 
+.hhaven-proj {
+    display: none;
+    height: 0rem;
+    width: 0rem;
+    
+}
+
+.proj-container:hover .hhaven-proj {
+    display: flex;
+    
+}
+
+.proj-container .hhaven-proj {
+    height: 50rem;
+    width: 100%;
+    border:3px solid black;
+    margin: 0px auto;
+}
+
 .crt-proj {
     width: 100%;
     height: 30rem;
@@ -333,13 +354,13 @@ h1 {
     margin: 0px auto;
 }
 
-.hhaven-proj {
+/*.hhaven-proj {
     width: 100%;
     height: 50rem;
     min-width: 10rem;
     display: flex;
     border: 3px solid black;
-    margin: 0px auto;
+    margin: 0px auto;*/
 }
 /*=== PROJECT POSTS - END ===*/
 
