--- a/files/style.css
+++ b/files/style.css
@@ -161,7 +161,7 @@ h1 {
 
 .navbar:hover {
     height: 100vh;
-    width: 9rem;
+    width: 8rem;
 }
 
 .navbar:hover .nav-link {
@@ -315,6 +315,14 @@ h1 {
     margin: 0px auto;
 }
 
+.open-proj {
+    border: none;
+    margin: 5px auto;
+    font-size: 16px;
+    outline: 0;
+    cursor: pointer;
+}
+
 .proj-header {
     width: 100%;
     font-size: 30px;
@@ -326,24 +334,32 @@ h1 {
     margin-bottom: 0.25rem;
 }
 
-.hhaven-proj {
+.proj-header:hover .forog {
+    transform: rotate(90deg);
+    transition: transform 200ms ease;
+}
+
+.proj-frame #hhaven-proj {
     display: none;
     height: 0rem;
     width: 0rem;
-    
+    position: relative;
 }
 
-.proj-container:hover .hhaven-proj {
+.proj-header:hover .proj-frame #hhaven-proj {
     display: flex;
-    
-}
-
-.proj-container .hhaven-proj {
     height: 50rem;
     width: 100%;
     border:3px solid black;
     margin: 0px auto;
 }
+
+/*.proj-container .proj-frame {
+    height: 50rem;
+    width: 100%;
+    border:3px solid black;
+    margin: 0px auto;
+}*/
 
 .crt-proj {
     width: 100%;
