--- a/files/style.css
+++ b/files/style.css
@@ -376,8 +376,8 @@ h1 {
     min-width: 10rem;
     display: flex;
     border: 3px solid black;
-    margin: 0px auto;*/
-}
+    margin: 0px auto;
+}*/
 /*=== PROJECT POSTS - END ===*/
 
 @keyframes mozog {
